styles/default.css
/* styles/default.css */
/* Color Scheme */
:root {
  --primary-color1: #9E9D80;
  --primary-color2: #BF7F5A;
  --primary-color3: #F8F4F1;
  --primary-color4: #1F2A38;

  --secondary-color1: #1A0066;
  --secondary-color2: #9E4D63;
  --secondary-color3: #000000;
}

@font-face {
  font-family: "Inter";
  src: url("../fonts/Inter_Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Inter";
  src: url("../fonts/Inter_Italic.ttf") format("truetype");
  font-weight: normal;
  font-style: italic;
}

@font-face {
  font-family: "Inter";
  src: url("../fonts/Inter_Bold.ttf") format("truetype");
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: "Inter";
  src: url("../fonts/Inter_BoldItalic.ttf") format("truetype");
  font-weight: bold;
  font-style: italic;
}

/* Basic reset */
html, body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  overflow-y: scroll;
  scroll-behavior: smooth;
  scrollbar-width: none;
  min-height: 100vh;
}

/* General body styling */
body {
  font-family: "Inter", "Helvetica Neue", Helvetica, Arial, sans-serif;
  margin: 0px;
  padding: 0px;
  background-color: var(--primary-color3);
  color: var(--primary-color4); 
  display: flex;
  flex-direction: column;
}

strong {
  font-weight: bold;
  font-style: normal;
}

em {
  font-weight: normal;
  font-style: italic;
}

em strong{
  font-weight: bold;
  font-style: italic;
}

[data-include] {
  min-height: 100px;
}

/* Header styling */
header {
  background-color: var(--primary-color1);
  color: var(--primary-color4); 
  text-align: center;
  padding: 30px 0px;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
  min-width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

@media (max-width: 480px) {
  header {
    display: flex;
    flex-direction: column;
  }
}

h1 {
  margin: 0px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  font-size: 3em;
  font-weight: bold;
  align-self: center;
}

/* Try to find a way to do this without using ID. 
Ideal solution doesnt affect brand page h2s, maybe change these to a lower level */
#greeting {
  text-align: center;
}

h2 {
  margin-bottom: 0%;
  font-size: 2em;
  font-weight: normal;
  color: var(--primary-color4);
}

.key-point {
  align-self: flex-start;
  margin-left: 12.5%;
}

p,
body > main:nth-child(3) > p:nth-child(2) {
  max-width: 55%;
  font-size: 1.3em;
  line-height: 1.4em;
  color: var(--primary-color4);
  padding: 20px;
  margin-top: .5em;
}

body > main:nth-child(3) > p {
  margin-top: -1.2em;
}

body > main:nth-child(3) > img {
  max-width: 8em;
  height: 5em;
  margin-top: -.75em;
}

/* Link styles */
a {
  color: var(--primary-color4);
  transition: color 0.3s, text-decoration 0.3s;
  text-decoration: none;
}

/* Hover state of links */
a:hover {
  text-decoration: underline; 
}

/* Visited state of links */
a:visited {
  color: var(--primary-color3); 
}

/* Active state of links (when clicked) */
a:active {
  text-decoration: underline; 
}

/* Navigation styling */
nav {
  background-color: var(--primary-color4); 
  min-width: 100%;
  display: flex;
  justify-content: space-evenly;
}

nav ul {
  list-style-type: none;
  margin: 0px;
  padding: 0px;
  text-align: center;
}

nav ul li {
  display: inline;
}

nav ul li a,
li > button {
  display: inline-block;
  margin: 0%;
  border: none;
  padding: 15px 25px;
  color: var(--primary-color3);
  text-decoration: none;
  font-size: 1.2em;
  background-color: var(--primary-color4);
  transition: background-color 0.3s, color 0.3s;
}

nav ul li a:hover,
li > button:hover {
  background-color: var(--primary-color2);
  color: var(--secondary-color3); 
}

/* Navigation link active state */
nav ul li a:active,
li > button:active {
  color: var(--primary-color1);
}

nav > ul > li:last-of-type  {
  display: inline-block;
}

nav li > ul {
  display: none;
  position: absolute;
  z-index: 1;
}

.show {
  display: block;
  float: left;
  padding: 0px;
}

body > nav > ul > li > ul:nth-child(2) > li > a{
  display: flex;
  background-color: var(--primary-color2);
  color: var(--secondary-color3);
  width: 64.7%;
} 

body > nav > ul > li > ul:nth-child(2) > li > a {
  border-left: 1px solid var(--primary-color4);
  border-right: 1px solid var(--primary-color4);
}

body > nav > ul > li > ul:nth-child(2) > li:last-child > a {
  border-bottom: 1px solid var(--primary-color4);
}

body > nav > ul > li > ul:nth-child(2) > li:first-child > a {
  border-top: 1px solid var(--primary-color4);
}

main {
  display: flex;
  align-items: center;
  flex-direction: column;
  overflow-y: scroll;
  scrollbar-width: none;
  flex: 1;
  margin: .5em;
  justify-content: center;
}

body > main > ul {
  margin: 0px;
  align-self: center;
}

form {
  display: flex;
  flex-direction: column;
  padding: 3em;
  margin-top: 1.2em;
  margin-bottom: 1.2em;
  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
  border-radius: 5%;
  border: 2px solid var(--primary-color4);
}

input {
  margin-bottom: 1.2em;
  border-color: var(--primary-color4);
  height: 30px;
  font-size: 1em;
  color: var(--primary-color4);
}

button {
  border-color: var(--primary-color4);
  color: var(--primary-color3);
  padding: .3em;
  margin: .5em;
  background-color: var(--primary-color4);
  font-size: 1em;
}

button:hover {
  background-color: var(--primary-color3);
  color: var(--primary-color4);
  text-decoration: underline;
}

.dropdownButton .triangle {
  display: inline-block;
  text-decoration: none;  /* No underline on the triangle */
}

.dropdownButton:hover .triangle {
  text-decoration: none; 
}

/* Styling for the first link within main p elements */
main > p > a:any-link,
li > strong > a:any-link {
  color: var(--secondary-color2); 
}

/* Hover state for links within main p elements */
main > p > a:any-link:hover,
li > strong > a:hover {
  color: var(--primary-color4); 
  text-decoration: underline;
}

/* Color Table */
table {
  font-size: 1.3em;
  width: 55%;
  align-self: center;
  border-collapse: collapse;
  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
}

th, td, td[data-color] {
  border: 1px solid var(--primary-color4);
  text-align: left;
  padding: .4em;
}

th {
  background-color: var(--primary-color1);
  color: var(--primary-color4);
}

hr {
  color: var(--primary-color4);
  min-width: 75%;
  margin-top: 0%;
  margin-bottom: 3%;
}

/* First li items */
td[data-color="prim1"] {
  background-color: var(--primary-color1);
}

td[data-color="prim2"] {
  background-color: var(--primary-color2);
  color: var(--secondary-color3);
}

td[data-color="prim3"] {
  background-color: var(--primary-color3);
}

td[data-color="prim4"] {
  background-color: var(--primary-color4);
  color: var(--primary-color3);
}

td[data-color="sec1"] {
  background-color: var(--secondary-color1);
  color: var(--primary-color3);
}

td[data-color="sec2"] {
  background-color: var(--secondary-color2);
  color: var(--secondary-color3)
}

td[data-color="sec3"] {
  background-color: var(--secondary-color3);
  color: var(--primary-color3);
}


/* Selects Fonts and Color Scheme uls */
dl {
  list-style-type: none;
  margin: 0%;
  padding: 0%;
  max-width: 55%;
  align-self: center;
  font-size: 1em;
}

/* fonts used */
dl > dd {
  margin-bottom: 2%;
  font-size: 1.3em;
}

/* Image styling */
body > main:nth-child(3) > img:nth-child(20) {
  max-width: 8em;
  height: 5em;
  margin: 2% auto;
}

header img {
  max-width: 8em;
  height: 2em;
  margin-right: .5em;
}

/* Styling for images */
body > main > figure > img {
  border-radius: 10px;
  max-width: 100%;
  display: flex;
  margin: .5rem auto;
  box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.2);
}

/* Styling for figure captions */
figcaption {
  font-size: 1em;
  text-align: center;
  color: var(--primary-color4);
}

/* Paragraph styling */
section > p{
  font-size: 1.3em; 
  font-variant-numeric: tabular-nums;
  line-height: 1.4em; 
  color: var(--primary-color4);
  border-radius: 10px;
  padding: 20px;
  max-width: 100%;
  background: var(--primary-color3);
  overflow-y: scroll;
  scrollbar-width: none;
  scroll-behavior: smooth;
  max-height: 60vh;
  margin-left: auto;
  margin-right: auto;
}

main > ul > li,
main > ul > ol > li {
  font-size: 1.2em;
  line-height: 1.4em; 
  max-width: 55vw; 
  max-height: 100vh;
  padding: 0px;
  background: none;
  color: var(--primary-color4); 
  background-color: var(--primary-color3); 
  margin: .2em 0em;
  align-self: center;
}

/* Ordered list styling */
ol {
  list-style-type: upper-roman;
  color: var(--primary-color4);
}

/* Footer styling */
footer {
  background: var(--primary-color1);
  margin-top: auto;
  padding: .4rem 0px;
  max-width: 100%;
  max-height: 100%;
  display: flex;
  flex-direction: column;
}

/* Footer link styles */
footer a {
  color: var(--secondary-color1);
}

footer a:visited {
  color: var(--secondary-color2); 
}

footer > span > strong > a:visited {
  color: var(--secondary-color2);
}

footer > span > strong > a {
  color: var(--secondary-color1);
}

body > footer > span {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  text-align: center;
  padding: .4rem 0px;
  font-size: 1.3em;
}

footer a:not(:first-of-type) + a,
body > footer > span > a{
  padding: 0px 5px;
  margin: 0px 5px;
  display: flex;
  max-width: 100%;
}

